plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

group 'com.faaizz'
version '1.4'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
    compile 'com.google.code.gson:gson:2.8.6'
}

test {
    useJUnitPlatform()
}

javafx{
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

mainClassName= 'com.faaizz.GUI.Main'

//MAIN MANIFEST TO ALLOW EXECUTION OF .jar ARTIFACT
jar {
    manifest {
        attributes(
                'Main-Class': 'com.faaizz.GUI.Main'
        )
    }

    //THIS BUNDLES THE DEPENDENCIES INTO THE .jar ARTIFACT
    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }

    /*TO RUN JAR FILE YOU MUST SUPPLY THE FOLLOWING JVM ARGUMENTS
        --module-path <path to javafx sdk>/lib
        --add-modules=javafx.controls,javafx.fxml
    */
}

